Try again deployment

--- a/contributing.html
+++ b/contributing.html
@@ -176,6 +176,7 @@
                         <h1 id="contributing"><a class="header" href="#contributing">Contributing</a></h1>
 <p>I welcome all contributions to the book whether it is via a pull request or raising an issue.</p>
 <p>Ideally it would come with an example using the test_spiral (I haven't published the code to a repository yet)</p>
+<p><a href="https://github.com/bevy-logging/bevy_logging">Github</a></p>
 
                     </main>
 
