--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@ however I have found this is not as much the case with Bevy.</p>
 <p>While Rust's compile-time checks catch many errors, Bevy's ECS can introduce runtime issues:</p>
 <ul>
 <li>Queries breaking due to component changes</li>
-<li>Systems running in unexpected orders</li>
+<li>Systems running in an unexpected order</li>
 </ul>
-<p>Advanced logging and tracing help catch these issues earlier and provide more context for debugging.</p>
+<p>Advanced logging and tracing can help catch these issues earlier and provide more context for debugging.</p>
 <p>I hope to help the reader fix issues with their games quicker and give something back to the community.</p>
 <p>The documentation around Tracing is overwhelming for me and talks a lot about async which I have not used.</p>
 <h3 id="what-this-book-is-not"><a class="header" href="#what-this-book-is-not">What this book is not</a></h3>
