--- a/intoduction.html
+++ b/intoduction.html
@@ -192,7 +192,7 @@ however I have found this is not as much the case with Bevy.</p>
 <p>While Rust's compile-time checks catch many errors, Bevy's ECS can introduce runtime issues:</p>
 <ul>
 <li>Queries breaking due to component changes</li>
-<li>Systems running in an unexpected orders</li>
+<li>Systems running in an unexpected order</li>
 </ul>
 <p>Advanced logging and tracing help catch these issues earlier and provide more context for debugging.</p>
 <p>I hope to help the reader fix issues with their games quicker and give something back to the community.</p>
