--- a/contributing.html
+++ b/contributing.html
@@ -175,8 +175,8 @@
                     <main>
                         <h1 id="contributing"><a class="header" href="#contributing">Contributing</a></h1>
 <p>I welcome all contributions to the book whether it is via a pull request or raising an issue.</p>
-<p>Ideally it would come with an example using the test_spiral (I haven't published the code to a repository yet)</p>
 <p><a href="https://github.com/bevy-logging/bevy_logging">Github</a></p>
+<p>Ideally it would come with an example using the <a href="https://github.com/bevy-logging/test_spiral">test_spiral</a></p>
 
                     </main>
 
