--- a/index.html
+++ b/index.html
@@ -199,8 +199,9 @@ however I have found this is not as much the case with Bevy.</p>
 <p>The documentation around Tracing is overwhelming for me and talks a lot about async which I have not used.</p>
 <h3 id="what-this-book-is-not"><a class="header" href="#what-this-book-is-not">What this book is not</a></h3>
 <p>This book will not talk about debugging tools beyond logging.</p>
-<p>Please note this document is not an official document of bevy's
-Referenced code can be found <a href="https://github.com/bevy-logging/test_spiral">here</a></p>
+<p>Please note this document is not an official document of bevy's</p>
+<p>Referenced code can be found <a href="https://github.com/bevy-logging/test_spiral">here</a>
+Or you could follow along on your own project.</p>
 
                     </main>
 
