--- a/print.html
+++ b/print.html
@@ -826,7 +826,7 @@ test_spiral: not actually going to run
 <p>If you recall an earlier section of the book say equate targets with modules <em>for now</em></p>
 <p>You can change that using arguments to instruments, this will not be demonstrated however,
 As I have never had a need for it yet.</p>
-<p>More about instruments (here.)[https://docs.rs/tracing/latest/tracing/attr.instrument.html]</p>
+<p>More about instruments <a href="https://docs.rs/tracing/latest/tracing/attr.instrument.html">here</a></p>
 <h3 id="spans"><a class="header" href="#spans">Spans</a></h3>
 <p>I think of spans as tags, I don't have a lot of experience with them so this will be brief and incomplete.</p>
 <p>My main use case for tags is grouping structually unrelated code that has a common theme such as timing or system type.</p>
