better layer example

--- a/print.html
+++ b/print.html
@@ -1158,7 +1158,7 @@ let start_layer = tracing_subscriber::fmt::layer()
     .without_time()
     .with_ansi(false)
     .with_writer(Mutex::new(log_file))
-    .with_filter(EnvFilter::from_str("none,test_spiral::[start]").unwrap());
+    .with_filter(EnvFilter::from_str("none,test_spiral::[start]=trace").unwrap());
 <span class="boring">}</span></code></pre></pre>
 <p>This above layer will send the file to a file by output log based on all spans that have start</p>
 <p>we can add them as below, just above your main application,</p>
